--- a/404.html
+++ b/404.html
@@ -3,15 +3,15 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <title>География 404</title>
-        <link rel="icon" href="favicon.ico">
-        <linkrel="stylesheet" href="style.css">
+        <link rel="icon" href="res/favicon.ico">
+        <link rel="stylesheet" href="style.css">
     <body>
-        <a href="https://microvolna.github.io/geography/">
-            <img src="logo.png" alt="Логотип">
+        <a href="https://iamlostshe.github.io/geography/">
+            <img src="res/logo.png" alt="Логотип">
         </a>
         <div class="container">
-          <h1>Страница не найдена 404</h1>
-          <p>Если вы это видите, то вы что-то напутали с ссылкой, для того что-бы исправить перейдите <a href="https://microvolna.github.io/geography/">на главную.</a></p>
+            <h1>Страница не найдена 404</h1>
+            <p>Если вы это видите, то вы что-то напутали с ссылкой, для того что-бы исправить перейдите <a href="https://iamlostshe.github.io/geography/">на главную.</a></p>
         </div>
     </body>
 </html>
